--- a/polymerstarterkit/app/styles/main.css
+++ b/polymerstarterkit/app/styles/main.css
@@ -12,3 +12,11 @@ body {
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #333;
 }
+
+#headerLogo {
+	position: relative;
+	bottom: -8px;
+	vertical-align: center;
+	width: 1.3em;
+	height: 1.3em;
+}
