adds landscape mode to ios, pawprint, main theme color and filters

--- a/barkbites/platforms/ios/www/styles/main.css
+++ b/barkbites/platforms/ios/www/styles/main.css
@@ -1,1 +1,1 @@
-body{background:#fafafa;font-family:Roboto,'Helvetica Neue',Helvetica,Arial,sans-serif;color:#333}
+body{background:#fafafa;font-family:Roboto,'Helvetica Neue',Helvetica,Arial,sans-serif;color:#333}#headerLogo{position:relative;bottom:-8px;vertical-align:center;width:1.3em;height:1.3em}
